src/objects/ISSP_AMS_Contextual_Help__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to display contextual help on AMS Portal forms in users portal language, since forms only display in 3 languages (en_US, fr, es)</description>
    <fields>
        <fullName>ISSP_AMS_HelpText_ar__c</fullName>
        <label>Contextual Help Text (ar)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_de__c</fullName>
        <label>Contextual Help Text (de)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_en_US__c</fullName>
        <label>Contextual Help Text (en_US)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_es__c</fullName>
        <label>Contextual Help Text (es)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_fr__c</fullName>
        <label>Contextual Help Text (fr)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_in__c</fullName>
        <inlineHelpText>Indonesia help text</inlineHelpText>
        <label>Contextual Help Text (in)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_it__c</fullName>
        <label>Contextual Help Text (it)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_jp__c</fullName>
        <label>Contextual Help Text (jp)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_ko__c</fullName>
        <label>Contextual Help Text (ko)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_pt_BR__c</fullName>
        <label>Contextual Help Text (pt BR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_th__c</fullName>
        <inlineHelpText>Thai</inlineHelpText>
        <label>Contextual Help Text (th)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_vi__c</fullName>
        <inlineHelpText>Vietnamese</inlineHelpText>
        <label>Contextual Help Text (vi)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISSP_AMS_HelpText_zh_CN__c</fullName>
        <label>Contextual Help Text (zh_CN)</label>
        <type>TextArea</type>
    </fields>
    <label>ISSP AMS Contextual Help</label>
</CustomObject>